<resources>
    <string name="app_name">ExemploCRUD</string>
    <string name="codigo">Codigo</string>
    <string name="nome">Nome</string>
    <string name="titulacao">Titulacao</string>
    <string name="professor">Professor</string>
    <string name="inserir">Inserir</string>
    <string name="modificar">Modificar</string>
    <string name="excluir">Excluir</string>
    <string name="buscar">Buscar</string>
    <string name="listar">Listar</string>
    <string name="disciplina">Disciplina</string>
    <string name="inicio">App Acadêmico</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>