<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentProfessor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfessorFragment">

    <EditText
        android:id="@+id/etCodigoProf"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="21dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnBuscarProf"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnBuscarProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="42dp"
        android:text="@string/buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etCodigoProf"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNomeProf"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/btnBuscarProf"
        app:layout_constraintStart_toStartOf="@+id/etCodigoProf"
        app:layout_constraintTop_toBottomOf="@+id/etCodigoProf" />

    <EditText
        android:id="@+id/etTitulacaoProf"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/titulacao"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/etNomeProf"
        app:layout_constraintStart_toStartOf="@+id/etNomeProf"
        app:layout_constraintTop_toBottomOf="@+id/etNomeProf" />

    <Button
        android:id="@+id/btnInserirProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="44dp"
        android:text="@string/inserir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitulacaoProf" />

    <Button
        android:id="@+id/btnModificarProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="42dp"
        android:text="@string/modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitulacaoProf" />

    <Button
        android:id="@+id/btnExcluirProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="26dp"
        android:text="@string/excluir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInserirProf" />

    <Button
        android:id="@+id/btnListarProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="4dp"
        android:text="@string/listar"
        app:layout_constraintEnd_toEndOf="@+id/btnModificarProf"
        app:layout_constraintTop_toBottomOf="@+id/btnModificarProf" />

    <TextView
        android:id="@+id/tvListarProf"
        android:layout_width="0dp"
        android:layout_height="189dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTituloProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="39dp"
        android:text="@string/professor"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarProf"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>