<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentDisciplina"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisciplinaFragment">

    <TextView
        android:id="@+id/tvTituloDisc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:text="@string/disciplina"
        app:layout_constraintEnd_toEndOf="@+id/etCodigoDisc"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCodigoDisc"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarDisc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloDisc" />

    <EditText
        android:id="@+id/etNomeDisc"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCodigoDisc" />

    <Button
        android:id="@+id/btnBuscarDisc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/buscar"
        app:layout_constraintBottom_toBottomOf="@+id/etCodigoDisc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etCodigoDisc" />

    <Button
        android:id="@+id/btnInserirDisc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/inserir"
        app:layout_constraintEnd_toEndOf="@+id/btnExcluirDisc"
        app:layout_constraintTop_toBottomOf="@+id/spProfDisc" />

    <Button
        android:id="@+id/btnModificarDisc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="37dp"
        android:text="@string/modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spProfDisc" />

    <Button
        android:id="@+id/btnExcluirDisc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="22dp"
        android:text="@string/excluir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInserirDisc" />

    <Button
        android:id="@+id/btnListarDisc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="3dp"
        android:text="@string/listar"
        app:layout_constraintEnd_toEndOf="@+id/btnModificarDisc"
        app:layout_constraintTop_toBottomOf="@+id/btnModificarDisc" />

    <TextView
        android:id="@+id/tvListarDisc"
        android:layout_width="0dp"
        android:layout_height="190dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="1dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnExcluirDisc" />

    <Spinner
        android:id="@+id/spProfDisc"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeDisc" />
</androidx.constraintlayout.widget.ConstraintLayout>